# rask

./: Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs
src/controllers/: contact_controller.rs  dashboard_controller.rs  footer_controller.rs  header_controller.rs  mod.rs  project_controller.rs  task_controller.rs
src/models/: mod.rs  person.rs  project.rs  task.rs  task_status.rs
src/views/: contact.rs  dashboard.rs  footer.rs  header.rs  mod.rs  project.rs  task.rs
