[package]
name = "rask"
version = "0.1.0"
authors = ["pandorixtech <52691643+pandorixtech@users.noreply.github.com>"]
edition = "2018"
keywords = ["task", "taskmanager", "scrum", "cli", "tui"]
licence = "MIT"
categories = ["command-line-utilities", "visualization", "organization"]
description = "A cli task manager for developers"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]                                                     
#default = ["termion-backend"]                                
#crossterm-backend = ["tui/crossterm", "crossterm"] 

[dependencies]
rusqlite = { version="0.30.0", features=["bundled", "array"]}
regex = "1.4.3"
chrono = "0.4.0"
argh = "0.1.4"
#crossterm = { version = "0.17", optional = true, default-features = false }
dirs = "2.0.2"
notify-rust = "4.9.0"
ratatui = { version = "0.25.0", features = ["crossterm", "widget-calendar"], default-features = false }
crossterm = "0.27.0"

